# drivecycle

./: .buildinfo  .bumpversion.cfg  .editorconfig  .flake8  .gitignore  README.md  README.rst  battery.html  drivecycle.html  energy.html  genindex.html  index.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg  usage.html  valhalla.html
.github/workflows/: publish-to-pypi.yml  sphinx-docs.yml
_sources/: battery.rst.txt  drivecycle.rst.txt  energy.rst.txt  index.rst.txt  usage.rst.txt  valhalla.rst.txt
_static/: battery.rst  conf.py  drivecycle.rst  index.rst  valhalla.rst
docs/: requirements.txt
docs/source/: conf.py  drivecycle.rst  index.rst  modules.rst
docs/source/css/: custom.css
drivecycle/: __init__.py  drivecycle.py  energy.py  graph.py  plot.py  plots.py  route.py  simplification.py  trajectory.py  utils.py  velocity.py
drivecycle/utils/: plots.py  utils.py
notebooks/: Drivecycle-Example.ipynb  Drivecycle_example_2.ipynb  SOC_Example1-Copy1.ipynb  SOC_Example1-Transitland.ipynb  SOC_Example1.ipynb  Validation.ipynb  drivecycle_api.ipynb  drivecycle_example.ipynb  edges  elevation  energy.ipynb  energy2.ipynb  gear_ratio_test.ipynb  graphs.ipynb  kernel_density.ipynb  one_cycle.m  postgis.ipynb  requirements.txt  stops  trajectory_example.ipynb
notebooks/test_data/Cycle/: distance.csv  grade.csv  speed.csv  time.csv
notebooks/test_data/Route15/: distance.csv  grade.csv  speed.csv  time.csv
scripts/: format  lint  notebook  publish  test  update
tests/: test_drivecycle.py  test_route.py  teste_module.py
tests/data/: calgary-1-elv.json  calgary-1.json  calgary-10-edges.json  calgary-10-elv.json  calgary-21-elv.json  calgary-21.json
