[metadata]
name = drivecycle
version = 0.1.0
description = Create drivecycles and energy consumption simulations for bus routes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Saadiq Mohiuddin
keywords =
    transit
    drivecycle
    velocity

[options]
packages = drivecycle
install_requires =
    numpy
    networkx
    matplotlib
