[metadata]
name = drivecycle
version = 0.1.0-beta
description = Create drivecycles and energy consumption simulations for vehicles.
long_description = file: README.md
long_description_content_type = text/markdown
author = Saadiq Mohiuddin
keywords =
    transit
    drivecycle
    velocity

[options]
packages = find:
install_requires =
    numpy
    networkx
    scipy
    matplotlib
